Bug 333962 - Wrong metadata displayed on information panel if there are duplicated metadata tags
Summary: Wrong metadata displayed on information panel if there are duplicated metadat...
Status: RESOLVED FIXED
Alias: None
Product: Baloo
Classification: Unmaintained
Component: Widgets (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Vishesh Handa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-27 16:02 UTC by Ignacio Serantes
Modified: 2014-11-27 16:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
A screenshot displaying the bug (187.55 KB, image/png)
2014-04-27 16:03 UTC, Ignacio Serantes
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ignacio Serantes 2014-04-27 16:02:46 UTC
When there is more than one artist in a audio file information panel displays in artist metadata only one of the possible values.

Instead balooshow displays right metadata.

Reproducible: Always

Steps to Reproduce:
1. Tag an audio file with more of an artist tag.
2. Index that file.
3. Select it in Dolphin with Information Panel visible.
Actual Results:  
Data displayed is incorrect.

Expected Results:  
Data displayed must be the one stored in the DB.

I added an self explained screenshot.
Comment 1 Ignacio Serantes 2014-04-27 16:03:28 UTC
Created attachment 86296 [details]
A screenshot displaying the bug
Comment 2 Vishesh Handa 2014-11-27 16:01:51 UTC
Git commit a20396536fe6b9e562aca9d89ff80e3a71dbf8d1 by Vishesh Handa.
Committed on 27/11/2014 at 16:01.
Pushed by vhanda into branch 'master'.

WidgetFactory: Handle list of QVariants when displaying

M  +22   -11   src/widgetfactory.cpp

http://commits.kde.org/baloo-widgets/a20396536fe6b9e562aca9d89ff80e3a71dbf8d1