WidgetFactory: Handle list of QVariants when displaying

BUG: 333962